--- a/app/index.html
+++ b/app/index.html
@@ -21,22 +21,6 @@
                 <li class="navbar__button">
                     <span>About</span>
                 </li>
-                <li class="navbar__button">
-                    <span>About</span>
-                </li>
-                <li class="navbar__button">
-                    <span>About</span>
-                </li>
-                <li class="navbar__button">
-                    <span>About</span>
-                </li>
-                <li class="navbar__button">
-                    <span>About</span>
-                </li>
-
-                <li class="navbar__button">
-                    <span>About</span>
-                </li>
             </ul>
         </div>
         <div class="hero-wrapper">
@@ -54,7 +38,7 @@
 
         <div class="feature">
             <div class="feature-header">
-                <span>Our bolids</span>
+                <h2>Our bolids</h2>
             </div>
             <div class="feature-items">
                 <div class="feature-item">
@@ -73,8 +57,8 @@
         </div>
         <div class="footer">
             <div class="contact-us">
-                <span class="contact-us--header">Contact us</span>
-                <span class="contact-us--send-message">Send us message</span>
+                <h3 class="contact-us--header">Contact us</h3>
+                <h3 class="contact-us--send-message">Send us message</h3>
                 <textarea class="contact-us-email" name="email" id="email" rows="1" placeholder="your@email"></textarea>
                 <textarea class="contact-us-subject" name="subject" id="subject" rows="1" placeholder="subject"></textarea>
                 <textarea class="contact-us-content" name="content" id="content" rows="5" placeholder="content"></textarea>
